fix list header spacing

--- a/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_lists.scss
+++ b/KeithLink/KeithLink.Web.Presentation/angular-app/app/styles/pages/_lists.scss
@@ -83,6 +83,7 @@
   // border: 1px solid $color-border !important;
   box-shadow: 0px 0px 10px $color-border;
   td {
+    border-top: $color-border;
     background-color: $color-white !important;
   }
 }
